--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jacqueline</title>
-</head>
-<body>
-    <h1>my portfolio website</h1>
-</body>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="ta">
+  </head>
+  <body>
+    <section id="nav-section">
+      <div class="container">
+        <nav>
+          <div class="nav-left">
+            <a href="#">Home</a>
+            <a href="#">Portfolio</a>
+            <a href="#">About</a>
+          </div>
+          <h3>Jacqueline Offei</h3>
+          <div class="nav-right">
+            <a href="#">Services</a>
+            <a href="#">Skills</a>
+            <a href="#">Contact</a>
+          </div>
+        </nav>
+      </div>
+    </section>
+    <section class="hero">
+      <div data-aos="fade-right">
+      <h2> Jacqueline</h2>
+      <p>An aspiring web developer with years of experience and knack for continous learning</p>
+    </div>
+  </section>
+    <section>portfolio is here</section>
+    <section>about me is here</section>
+    <section>my services is here</section>
+    <section>my skills is here</section>
+    <section>footer is here</section>
+  </body>
 </html>
