adding minor updates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </section>
     <section class="hero">
-      <div data-aos="fade-right">
+      <div class='hero-overlay'>
       <h2> Jacqueline</h2>
       <p>An aspiring web developer with years of experience and knack for continous learning</p>
     </div>
