--- a/index.html
+++ b/index.html
@@ -1,40 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jacqueline</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="ta">
-  </head>
-  <body>
-    <section id="nav-section">
-      <div class="container">
-        <nav>
-          <div class="nav-left">
-            <a href="#">Home</a>
-            <a href="#">Portfolio</a>
-            <a href="#">About</a>
-          </div>
-          <h3>Jacqueline Offei</h3>
-          <div class="nav-right">
-            <a href="#">Services</a>
-            <a href="#">Skills</a>
-            <a href="#">Contact</a>
-          </div>
-        </nav>
-      </div>
-    </section>
-    <section class="hero">
-      <div class='hero-overlay'>
-      <h2> Jacqueline</h2>
-      <p>An aspiring web developer with years of experience and knack for continous learning</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body>
+  <nav>
+    <h3>Jackie.</h3>
+    <div>
+      <div class="nav-items">
+        <a href="#" class="nav-text">Home</a>
+        <a href="#" class="nav-text">About</a>
+        <a href="#" class="nav-text">Service<a>
+        <a href="#" class="nav-text">Projects<a>
+        <a href="#" class="nav-text">Contact</a>
+        </div>
+    </div>
+  </nav>
+  <section class="hero">
+    <div class="container overlay">
+    <div class="hero-info
+    hero-text">
+      <h2>
+        Jackie
+      </h2>
+      <span> I am a web designer</span>
+    </div>
     </div>
   </section>
-    <section>portfolio is here</section>
-    <section>about me is here</section>
-    <section>my services is here</section>
-    <section>my skills is here</section>
-    <section>footer is here</section>
-  </body>
+  <section id="about">
+    <div class="container about-cont">
+      <div class="about-image1">
+        <img src="./images/about_1.jpg" alt="1">
+      </div>
+      <div class="about-image2">
+        <img src="./images/about_2.jpg" alt="2">
+        <div>
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+    </div>
+
+    
+  </section>
+  <section class="container section">
+    <div class="row services headings paragraph">
+      <div>
+        <i class="fa-regular fa-paper-plane"></i>
+        <h4> Email design</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div>
+        <i class="fa-solid fa-desktop"></i>
+        <h4> Web Design</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div>
+        <i class="fa-solid fa-mobile"></i>
+        <h4> Mobile Design</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div>
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <h4> SEO</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+  </section>
+  
+  <section>footer</section>
+</body>
 </html>
