--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="about-image">
             <img src="./images/about (2).jpg" alt="about-image">
           </div>
-          <div class="about-description">
+          <div class="about-description slide-top">
             <h3>About me</h3>
             <span>Hiii... I'm  Jacqueline Offei. </span>
             <p>I am a Senior Web Developer with about 5 years experience, with years of experience i have worked in diverse environments with diverse people</p>
@@ -46,9 +46,10 @@
         </div>
   
   </section>
-  <section class="container skills-cont">
-    <div> <h2 class="skill-head">Skills</h2></div>
-    <div class="skills-cont">
+  <section class="skills-container">
+    <div class="flex flex-row justify-evenly">
+      <div> <h2 class="skill-head">Skills</h2></div>
+    <div>
       <div class="skills-text">
         <h4>Soft-Skills</h4>
         <p><span>&#10004</span>Project Management</p>
@@ -92,6 +93,7 @@
         </div>
       </div>
     </div>
+    </div>
     
 
   </section>
@@ -133,6 +135,15 @@
         <i class="fa-brands fa-github"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-regular fa-envelope"></i>
+      </div>
+      <div>
+        <form action="">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" placeholder="name"><br><br>
+  
+           <label for="email">Email:</label>
+            <input type="email" id="email" name="email"><br><br>
+        </form>
       </div>
       <div class="footer2 row">
         <p> Copyright ©2024 All rights reserved | This template was an ardous task</p>
