--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
   <nav>
@@ -21,15 +21,15 @@
         </div>
     </div>
   </nav>
-  <section class="hero">
+  <section class="hero background-blend-mode: overlay;">
     <div class="container overlay">
     <div class="hero-info hero-text">
       <h4>
         Jacqueline Offei
       </h4>
-      <span> A senior Web developer</span>
+      <span> A Web developer</span>
     </div>
-    <button class=""> Hire me</button>
+    <button class="hero-button"> Hire me</button>
     </div>
   </section>
   <section class="about">
@@ -43,10 +43,10 @@
             <span class="about-paragraph">Hiii... I'm  Jacqueline Offei. </span>
             <p class="about-paragraph">I am a Web Developer with about 5 years of professional experience, 
               specializing in creating adaptable and useer-centric sloutions. </p>
-            <p class="about-paragraph">My divers projects have sharpened my ability to uderstand and anticipate client needss, enabling me to deliver  tailored and effective outcomes </p>
-           <div>
-            <button> Download CV</button> 
-            <button> View Works</button>
+            <p class="about-paragraph">My diverse projects have sharpened my ability to uderstand and anticipate client needss, enabling me to deliver  tailored and effective outcomes </p>
+           <div class="button-container">
+            <button class="about-button"> Download CV</button> 
+            <button class="about-button"> View Works</button>
            </div>
           </div>
             
@@ -130,7 +130,7 @@
   
   <section class="spikes">
     <footer class="container">
-      <div class="contact-details">
+      <div class="contact-details font-weight: 500;">
         <p>Email: offeijacqueline@gmail.com<p>
         <p>Phone number: 0208737560<p>
           <p>Address: 301 Awoshie Market Street<p>
